--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -11,15 +11,30 @@
   padding:0;
   font-family: robotoregular;
 }
+html,body{
+  height: 100%;
+  width: 100%;
+}
+body{
+  display: table;
+  text-align: center;
+}
+.container{
+  display: table-cell;
+  vertical-align: middle;
+}
+.window, canvas{
+  border: 2px solid #ccc;
+  box-shadow: 0px 0px 10px #ccc;
+}
 canvas{
-  background:#eee;
+  //background:#eee;
   display:block;
   margin:0 auto
 }
 .menu{
-  background-color: #eee;
-  width: 480px;
-  height: 302px;
+  width: 720px;
+  height: 480px;
   margin: auto;
   display: table;
 }
@@ -27,6 +42,32 @@ canvas{
   display: table-cell;
   text-align: center;
   vertical-align: middle;
+}
+.menu .btnContainer{
+  display: table-cell;
+  text-align: center;
+  vertical-align: middle;
+}
+.menu .lvlContainer{
+  display: block;
+  text-align: center;
+  padding: 5%;
+  overflow: hidden;
+}
+.levelCard{
+  display: inline-block;
+  width: 100%;
+  margin-bottom: 30px;
+  height: 120px;
+  line-height: 120px;
+  background-color: #fff;
+  box-shadow: 0px 0px 10px #ccc;
+}
+.levelCard:hover{
+  box-shadow: 0px 0px 20px #999;
+}
+.levelCard:active{
+  box-shadow: 0px 0px 5px #999;
 }
 .menu button{
   display: block;
@@ -45,8 +86,19 @@ canvas{
 .menu button:active{
   box-shadow: 0px 0px 5px #999;
 }
+.container{
+  text-align: center;
+}
 #play{
-  background-color: #fcc;
-  width: 100%;
-  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: block;
+  width: 720px;
+  height: 480px;
+  line-height: 480px;
+  font-size: 200%;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  margin-left: -360px;
+  z-index: 10;
 }
