--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -22,83 +22,111 @@ body{
 .container{
   display: table-cell;
   vertical-align: middle;
+  text-align: center;
 }
-.window, canvas{
-  border: 2px solid #ccc;
-  box-shadow: 0px 0px 10px #ccc;
-}
-canvas{
-  //background:#eee;
-  display:block;
-  margin:0 auto
-}
-.menu{
+.window{
   width: 720px;
   height: 480px;
   margin: auto;
+  padding: 10px;
+  border: 1px solid #ccc;
+  box-shadow: 0px 0px 20px #ccc;
+  overflow: auto;
+}
+#menu{
   display: table;
 }
-.menu .btnContainer{
+.menu-items{
   display: table-cell;
-  text-align: center;
   vertical-align: middle;
 }
-.menu .btnContainer{
-  display: table-cell;
-  text-align: center;
-  vertical-align: middle;
-}
-.menu .lvlContainer{
-  display: block;
-  text-align: center;
-  padding: 5%;
-  overflow: hidden;
-}
-.levelCard{
-  display: inline-block;
-  width: 100%;
-  margin-bottom: 30px;
-  height: 120px;
-  line-height: 120px;
-  background-color: #fff;
-  box-shadow: 0px 0px 10px #ccc;
-}
-.levelCard:hover{
-  box-shadow: 0px 0px 20px #999;
-}
-.levelCard:active{
-  box-shadow: 0px 0px 5px #999;
-}
-.menu button{
+.menu-items button{
   display: block;
   width: 200px;
   height: 50px;
-  margin: 10px auto;
-  font-size: 120%;
   outline: 0;
+  margin: 10px auto;
+  font-size: 1.5em;
+  color: #057068;
   background-color: #fff;
   border: 1px solid #ccc;
   box-shadow: 0px 0px 10px #ccc;
 }
-.menu button:hover{
-  box-shadow: 0px 0px 20px #999;
+.menu-items button:hover{
+  box-shadow: 0px 0px 15px #999;
 }
-.menu button:active{
-  box-shadow: 0px 0px 5px #999;
+#logo{
+  width: 150px;
 }
-.container{
-  text-align: center;
+.menu-bar{
+  width: 100%;
+  height: 50px;
+  font-size: 1.5em;
+  line-height: 50px;
+  position: relative;
 }
-#play{
-  background-color: rgba(0, 0, 0, 0.5);
+.menu-bar button{
+  height: 100%;
+  width: 15%;
+  outline: 0;
+  font-size: 0.8em;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  box-shadow: 0px 0px 10px #ccc;
+  cursor: pointer;
+  position: absolute;
+  left: 0;
+}
+.menu-bar button:hover{
+  box-shadow: 0px 0px 15px #999;
+}
+.lvl-card{
+  display: inline-block;
+  width: 200px;
+  height: 160px;
+  margin: 15px;
+  border: 1px solid #ccc;
+  position: relative;
+  box-shadow: 0px 0px 10px #ccc;
+}
+.lvl-poster{
+  width: 100%;
+  height: 100%;
+  background-color: #ccc;
+}
+.lvl-name{
   display: block;
-  width: 720px;
-  height: 480px;
-  line-height: 480px;
-  font-size: 200%;
+  width: 100%;
+  height: 25%;
+  line-height: 40px;
+  font-size: 1.5em;
+  color: #f00;
+  font-weight: bold;
+  text-shadow: 0px 0px 5px #fff;
+  background: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.5));
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+.lvl-name:hover{
+  height: 50%;
+  line-height: 100px;
+}
+.lvl-card, .lvl-poster, .lvl-name{
+  cursor: pointer;
+}
+.lvl-lock{
+  background-color: rgba(0, 0, 0, 0.7);
+  width: 100%;
+  height: 100%;
+  line-height: 160px;
+  color: #f00;
+  font-size: 2em;
+  font-weight: bold;
   position: absolute;
   top: 0;
-  left: 50%;
-  margin-left: -360px;
-  z-index: 10;
+  left: 0;
+}
+#gamecanvas{
+  border:1px solid #ccc;
 }
