--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -6,6 +6,16 @@
     font-family: robotolight;
     src: url("../fonts/Roboto-Light.ttf");
 }
+@font-face {
+    font-family: 'fontello';
+    src: url('../font/fontello.eot?57285040');
+    src: url('../font/fontello.eot?57285040#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff?57285040') format('woff'),
+       url('../font/fontello.ttf?57285040') format('truetype'),
+       url('../font/fontello.svg?57285040#fontello') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
 *{
   margin:0;
   padding:0;
@@ -66,25 +76,28 @@ body{
   position: relative;
 }
 .menu-bar button{
-  height: 100%;
-  width: 15%;
+  height: 50px;
+  width: 50px;
+  border-radius: 25px;
   outline: 0;
-  font-size: 0.8em;
+  font-size: 1em;
   background-color: #fff;
-  border: 1px solid #ccc;
-  box-shadow: 0px 0px 10px #ccc;
+  border: 0;
+  //border: 1px solid #ccc;
+  //box-shadow: 0px 0px 10px #ccc;
   cursor: pointer;
   position: absolute;
   left: 0;
 }
 .menu-bar button:hover{
-  box-shadow: 0px 0px 15px #999;
+  //box-shadow: 0px 0px 15px #999;
+  color: #F00;
 }
 .lvl-card{
   display: inline-block;
   width: 200px;
   height: 160px;
-  margin: 15px;
+  margin: 12px;
   border: 1px solid #ccc;
   position: relative;
   box-shadow: 0px 0px 10px #ccc;
@@ -121,7 +134,7 @@ body{
   height: 100%;
   line-height: 160px;
   color: #f00;
-  font-size: 2em;
+  font-size: 4em;
   font-weight: bold;
   position: absolute;
   top: 0;
