--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -41,7 +41,6 @@ body{
   padding: 10px;
   border: 0;
   box-shadow: 0px 0px 20px #ccc;
-  overflow: auto;
 }
 #menu{
   display: table;
@@ -180,59 +179,47 @@ body{
     left: 0;
 }
 #score-lable{
-    display: block;
     width: 80px;
-    height: 40px;
-    line-height: 40px;
     font-size: 25px;
     font-weight: bold;
-    position: absolute;
-    left: 50px;
+    left: 150px;
 }
 #score{
-    display: block;
     width: 100px;
-    height: 40px;
     color: #F00;
-    line-height: 40px;
     font-size: 25px;
     font-weight: bold;
     text-align: left;
-    position: absolute;
-    left: 130px;
-    top: 0px;
+    left: 230px;
 }
-#btn-pause{
+.player-btn{
     display: block;
     width: 40px;
     height: 40px;
     line-height: 40px;
     font-size: 30px;
-    color: #000;
     position: absolute;
+}
+#btn-pause{
     right: 40px;
 }
-#btn-pause:hover, #player-home:hover{
+#btn-sound{
+    right: 80px;
+}
+#btn-music{
+    right: 120px;
+}
+.player-btn:hover{
     color: #F00;
     cursor: pointer;
 }
 #lives{
-    display: block;
     font-size: 20px;
     width: 120px;
-    height: 40px;
-    line-height: 40px;
-    position: absolute;
-    right: 80px;
+    left: 40px;
     color: #F00;
 }
 #player-home{
-    display: block;
-    width: 40px;
-    height: 40px;
-    font-size: 30px;
-    line-height: 40px;
-    position: absolute;
     right: 0;
 }
 #play{
