--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -28,6 +28,8 @@ html,body{
 body{
   display: table;
   text-align: center;
+  background-image: url("../img/skulls.png");
+    
 }
 .container{
   display: table-cell;
@@ -40,6 +42,8 @@ body{
   margin: auto;
   padding: 10px;
   border: 0;
+  background-color: #FFF;
+  z-index: -1;
   box-shadow: 0px 0px 20px #ccc;
 }
 #menu{
@@ -224,6 +228,7 @@ body{
 }
 #play{
     overflow: hidden;
+    background-color: rgba(255,255,255,0.5);
 }
 #player{
     display: block;
