--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -31,6 +31,14 @@ body{
   background-image: url("../img/skulls.png");
     
 }
+.btn{
+    outline: 0;
+    border: 0;
+}
+.btn:hover{
+    color: #F00;
+    cursor: pointer;
+}
 .container{
   display: table-cell;
   vertical-align: middle;
@@ -42,34 +50,45 @@ body{
   margin: auto;
   padding: 10px;
   border: 0;
+  position: relative;
   background-color: #FFF;
-  z-index: -1;
   box-shadow: 0px 0px 20px #ccc;
 }
 #menu{
-  display: table;
+    background-color: rgba(0,0,0,0);
 }
-.menu-items{
-  display: table-cell;
-  vertical-align: middle;
+#menu-top{
+    height: 350px;
 }
-.menu-items button{
-  display: block;
-  width: 200px;
-  height: 50px;
-  outline: 0;
-  margin: 10px auto;
-  font-size: 1.5em;
-  color: #057068;
-  background-color: #fff;
-  border: 1px solid #ccc;
-  box-shadow: 0px 0px 10px #ccc;
+#menu-bottom{
+    height: 200px;
+    width: 100%;
+    display: table;
 }
-.menu-items button:hover{
-  box-shadow: 0px 0px 15px #999;
+#menu-logo{
+    line-height: 350px;
+    font-size: 200px;
 }
-#logo{
-  width: 150px;
+.menu-item{
+    display: table-cell;
+    vertical-align: middle;
+}
+.menu-control{
+    width: 150px;
+    height: 150px;
+    margin: auto;
+    color: #fff;
+    border-radius: 75px;
+    //border: 1px solid #999;
+    text-shadow: 0px 0px 10px #666;
+}
+.control-icon{
+    line-height: 90px;
+    font-size: 70px;
+}
+.control-lable{
+    line-height: 60px;
+    font-size: 25px;
 }
 .menu-bar{
   width: 100%;
@@ -82,13 +101,8 @@ body{
   height: 50px;
   width: 50px;
   border-radius: 25px;
-  outline: 0;
   font-size: 30px;
   background-color: #fff;
-  border: 0;
-  //border: 1px solid #ccc;
-  //box-shadow: 0px 0px 10px #ccc;
-  cursor: pointer;
   position: absolute;
   left: 0;
 }
@@ -97,10 +111,6 @@ body{
     width: 100%;
     height: 500px;
     overflow-y: auto;
-}
-.menu-bar button:hover{
-  //box-shadow: 0px 0px 15px #999;
-  color: #F00;
 }
 .lvl-card{
   display: inline-block;
@@ -212,10 +222,6 @@ body{
 }
 #btn-music{
     right: 120px;
-}
-.player-btn:hover{
-    color: #F00;
-    cursor: pointer;
 }
 #player-name{
     height: 20px;
