--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -262,6 +262,41 @@ body{
 #gamecanvas{
   border:1px solid #ccc;
 }
+.splash-card{
+    display: block;
+    position: absolute;
+    width: 751px;
+    height: 501px;
+    overflow: hidden;
+    background-color: rgba(0,0,0,0.75);
+}
+.splash-control{
+    display: block;
+    width: 375px;
+    height: 275px;
+    margin-top: 125px;
+    margin-left: 187px;
+    color: #FFF;
+    //text-shadow: 0px 0px 50px #F00;
+    text-shadow: -1px -1px 10px #F00,
+                1px -1px 10px #F00,
+                -1px 1px 10px #F00,
+                1px 1px 10px #F00;
+}
+.splash-control-icon{
+    display: block;
+    width: 100%;
+    height: 175px;
+    line-height: 175px;
+    font-size: 150px;
+}
+.splash-control-msg{
+    display: block;
+    width: 100%;
+    height: 100px;
+    line-height: 100px;
+    font-size: 50px;
+}
 #player-splash{
     display: block;
     width: 750px;
