--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -8,7 +8,7 @@
 }
 @font-face{
     font-family: showg;
-    src: url("../fonts/showg.ttf");
+    src: url("../fonts/showcard.ttf");
 }
 @font-face {
     font-family: 'fontello';
